# cppFFT

./: .gitignore  CMakeLists.txt  README.md  fft.cpp
include/: fft.h  plot.h
src/: fft.cpp  main.cpp  plot.cpp
